--- a/my-quiz-site/src/components/Header/Header.css
+++ b/my-quiz-site/src/components/Header/Header.css
@@ -3,11 +3,21 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 100px;
-    border: 1px solid black;
 }
 
-.header .nav a{
+.custom a{
     text-decoration: none;
     margin-left: 20px;
     
 }
+
+/* <nav className='header mt-4'>
+           <div>
+             <h1 className='text-primary'>My Quiz Site</h1>
+           </div>
+           <div className='nav'>
+            <Link to='/'>Home</Link>
+            <Link to='/statistics'>statistics</Link>
+            <Link to='/blog'>Blog</Link>
+           </div>
+        </nav> */
